k8s/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  selector:
      app: mysql
  type: ClusterIP
  ports:
    - name: db
      port: 3306
      targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver-svc
                port: 
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service: 
                name: resultserver-svc
                port: 
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver-deployment
  labels:
    app: resultserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver
        image: IMAGE_TAG_RESULT_SERVER
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resultserver-svc
  labels:
    app: resultserver
spec:
  selector:
    app: resultserver
  type: NodePort
  ports:
   - name: http
     port: 80
     targetPort: 80
     nodePort: 30002
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: IMAGE_TAG_WEB_SERVER
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels:
    app: webserver
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
   - name: http
     port: 80
     targetPort: 80
     nodePort: 30001
     protocol: TCP
